# TempInd_LED_Em

./: CMakeLists.txt  Main.qml  main.cpp  temperaturesensor.cpp  temperaturesensor.h
